Working on Home Page

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <!-- Include Site Title in Our Site -->
   <!-- Include External Css Flie In Our Site -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <!-- Include External Css Flie In Our Site -->
   <!-- Include External Script File In Our Site -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
