--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,8 @@
         JavaScript enabled.Please enable it to continue.
     </strong>
   </noscript>
-  <div id="app"></div>
+  <div id="app">
+  </div>
 </body>
 
 </html>
